--- a/pretty-types.cabal
+++ b/pretty-types.cabal
@@ -1,5 +1,5 @@
 name:                pretty-types
-version:             0.2.1.0
+version:             0.2.2.0
 synopsis:            A small pretty printing DSL for complex types.
 description:         Please see README.md
 homepage:            https://github.com/sheyll/pretty-types#readme
@@ -22,6 +22,7 @@ library
   exposed-modules:     Data.Type.Pretty
   build-depends:       base >= 4.9 && < 5
                      , mtl >= 2.2 && < 3
+                     , tagged >= 0.8 && < 1
   default-language:    Haskell2010
   ghc-options:         -Wall -funbox-strict-fields -fno-warn-unused-do-bind
   default-extensions:  BangPatterns
@@ -61,6 +62,7 @@ test-suite spec
   build-depends:       base >= 4.9 && < 5
                      , hspec
                      , pretty-types
+                     , tagged >= 0.8 && < 1
   default-language:    Haskell2010
   default-extensions:  BangPatterns
                      , ConstraintKinds
