--- a/pretty-types.cabal
+++ b/pretty-types.cabal
@@ -1,5 +1,5 @@
 name:                pretty-types
-version:             0.2.3.1
+version:             0.3.0.0
 synopsis:            A small pretty printing DSL for complex types.
 description:         Please see README.md
 homepage:            https://github.com/sheyll/pretty-types#readme
@@ -7,7 +7,7 @@ license:             BSD3
 license-file:         LICENSE
 author:              Sven Heyll
 maintainer:          sven.heyll@gmail.com
-copyright:           2016 Sven Heyll
+copyright:           2016-2019 Sven Heyll
 category:            Text
 build-type:          Simple
 extra-source-files:   README.md
@@ -57,7 +57,6 @@ test-suite spec
   type:                exitcode-stdio-1.0
   ghc-options:         -Wall
   hs-source-dirs:      spec
-  default-language:    Haskell2010
   main-is:             PrettyTypesSpec.hs
   build-depends:       base >= 4.9 && < 5
                      , hspec
